feat: complete phase one public API
